670 - SF